--- a/public/app-dir/Product/Template.html
+++ b/public/app-dir/Product/Template.html
@@ -4,5 +4,8 @@
 <button ng-click="self.show()">Show</button>
 
 
-
+<br/>
+<input type="text" ng-model="self.domainProduct.name"/>
+<br/>
+{{self.domainProduct.yearModel}}
 
