--- a/public/app-dir/Product/Sidebar.html
+++ b/public/app-dir/Product/Sidebar.html
@@ -10,8 +10,8 @@ This is Product's sidebar. But it cannot reuse the controller of Product
 
 <hr/>
 <br/>
-{{self.domainProduct.name}}
+{{self.product.name}}
 <br/>
-<input type="text" ng-model="self.domainProduct.yearModel"/>
+<input type="text" ng-model="self.product.yearModel"/>
 
-<button ng-click="self.domainProduct.callbackSelected(self.domainProduct.yearModel)">Test ID</button>
+<button ng-click="self.product.callbackSelected(self.product.yearModel)">Test ID</button>
