--- a/public/app-dir/Product/Template.html
+++ b/public/app-dir/Product/Template.html
@@ -5,7 +5,10 @@
 
 
 <br/>
-<input type="text" ng-model="self.domainProduct.name"/>
+<input type="text" ng-model="self.product.name"/>
 <br/>
-{{self.domainProduct.yearModel}}
+{{self.product.yearModel}}
 
+
+
+Person Age: {{self.person.age}}
