--- a/public/index.html
+++ b/public/index.html
@@ -73,7 +73,10 @@
             <section ui-view="theSidebarView"></section>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-            <h1 class="page-header">Dashboard</h1>
+
+            <h1 class="page-header">
+                <div ui-view="theTitleView"></div>
+            </h1>
 
             <h2 class="sub-header">Section title</h2>
 
