Added shared title

--- a/public/app-dir/Product/Template.html
+++ b/public/app-dir/Product/Template.html
@@ -7,7 +7,7 @@
 <br/>
 <input type="text" ng-model="self.product.name"/>
 <br/>
-{{self.product.yearModel}}
+<input type="number" ng-model="self.product.yearModel"/>
 
 
 
