--- a/public/app-dir/Product/Sidebar.html
+++ b/public/app-dir/Product/Sidebar.html
@@ -12,6 +12,6 @@ This is Product's sidebar. But it cannot reuse the controller of Product
 <br/>
 {{self.product.name}}
 <br/>
-<input type="text" ng-model="self.product.yearModel"/>
+<input type="number" ng-model="self.product.yearModel"/>
 
 <button ng-click="self.product.callbackSelected(self.product.yearModel)">Test ID</button>
