--- a/public/app-dir/Product/Template.html
+++ b/public/app-dir/Product/Template.html
@@ -1,14 +1,14 @@
-{{self.sampleMessage}}
+{{p.sampleMessage}}
 
 
-<button ng-click="self.show()">Show</button>
+<button ng-click="p.show()">Show</button>
 
 
 <br/>
-<input type="text" ng-model="self.product.name"/>
+<input type="text" ng-model="p.product.name"/>
 <br/>
-<input type="number" ng-model="self.product.yearModel"/>
+<input type="number" ng-model="p.product.yearModel"/>
 
 
 
-Person Age: {{self.person.age}}
+Person Age: {{p.person.age}}
