--- a/public/app-dir/Product/Sidebar.html
+++ b/public/app-dir/Product/Sidebar.html
@@ -1,17 +1,8 @@
-This is Product's sidebar. But it cannot reuse the controller of Product
-
-
-<br/>
-<br/>
-
 {{s.sampleMessage}}
-
-
-
-<hr/>
+<br/>
 <br/>
 {{s.product.name}}
 <br/>
 <input type="number" ng-model="s.product.yearModel"/>
 
-<button ng-click="s.product.callbackSelected(s.product.yearModel)">Test ID</button>
+<button class="btn btn-default" ng-click="s.product.callbackSelected(s.product.yearModel)">Test ID</button>
