--- a/public/app-dir/Product/Template.html
+++ b/public/app-dir/Product/Template.html
@@ -1,14 +1,13 @@
 {{p.sampleMessage}}
 
 
-<button ng-click="p.show()">Show</button>
+<button class="btn btn-default" ng-click="p.show()">Show</button>
 
 
 <br/>
 <input type="text" ng-model="p.product.name"/>
 <br/>
-<input type="number" ng-model="p.product.yearModel"/>
+{{p.product.yearModel}}
 
 
 
-Person Age: {{p.person.age}}
