Made multi-folder test possible

--- a/public/app-dir/Product/Template.html
+++ b/public/app-dir/Product/Template.html
@@ -11,4 +11,7 @@
 {{p.product.yearModel}}
 
 
-
+<br/><br/>
+<input type="number" ng-model="p.product.multiplicand"/>
+<input type="number" ng-model="p.product.multiplier"/>
+{{p.product.product}}
