--- a/public/app-dir/Product/Template.html
+++ b/public/app-dir/Product/Template.html
@@ -15,3 +15,32 @@
 <input type="number" ng-model="p.product.multiplicand"/>
 <input type="number" ng-model="p.product.multiplier"/>
 {{p.product.product}}
+
+
+
+<form name="myForm">
+    <fieldset>
+        <legend>Upload on form submit</legend>
+        Username:
+        <input type="text" name="userName" ng-model="p.username" size="31" required>
+        <i ng-show="myForm.userName.$error.required">*required</i>
+        <br>Photo:
+        <input type="file" ngf-select ng-model="p.picFile" name="file"
+               accept="image/*" ngf-max-size="2MB" required>
+        <i ng-show="myForm.file.$error.required">*required</i><br>
+        <i ng-show="myForm.file.$error.maxSize">File too large
+            {{picFile.size / 1000000|number:1}}MB: max {{picFile.$errorParam}}</i>
+        <img ng-show="myForm.file.$valid" ngf-src="!picFile.$error && picFile"
+             class="thumb">
+        <br>
+        <button ng-disabled="!myForm.$valid"
+                ng-click="p.uploadPic(p.picFile)">Submit</button>
+      <span class="progress" ng-show="p.picFile.progress >= 0">
+        <div style="width:{{p.picFile.progress}}%"
+             ng-bind="p.picFile.progress + '%'"></div>
+      </span>
+        <span ng-show="p.picFile.result">Upload Successful</span>
+        <span class="err" ng-show="errorMsg">{{errorMsg}}</span>
+    </fieldset>
+    <br>
+</form>
