--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,9 @@
 
     <script src="/lib/requirejs/require.js" data-main="configuration"></script>
 
+
+    <link href="/stylesheets/style.css" rel="stylesheet">
+
     <base href="/">
 </head>
 
