Used the shared domain on controller

--- a/public/app-dir/Product/Template.html
+++ b/public/app-dir/Product/Template.html
@@ -44,3 +44,9 @@
     </fieldset>
     <br>
 </form>
+
+
+<hr/>
+
+Applied Interest: {{p.interestApplied}} <br/>
+Multiplication Result: {{p.multiplicationResult}}
