--- a/public/app-dir/Product/Template.html
+++ b/public/app-dir/Product/Template.html
@@ -49,4 +49,5 @@
 <hr/>
 
 Applied Interest: {{p.interestApplied}} <br/>
-Multiplication Result: {{p.multiplicationResult}}
+Multiplication Result: {{p.multiplicationResult}} <br/>
+UMD Result: {{p.umdResult}}
